Replace gap5 padded alignments with unpadded ones (SAM/BAM support only at present).
This is highly experimental and rather buggy still. Postponing for now
and placing in a dedicated branch.


git-svn-id: svn://svn.code.sf.net/p/staden/code/staden@2272 ba6f2710-ca9f-427c-89d3-5bf716dbc8e1

--- a/branches/unpadded_gap5/gap5/docs/TODO
+++ b/branches/unpadded_gap5/gap5/docs/TODO
@@ -1,3 +1,19 @@
+unpadded:
+
+- Tags: Need pos/nth for both start & end
+- hard-clips & "N" cigar ops
+- consensus cache (disabled!)
+- count base* functions
+- join contigs
+- sam export
+- import/export other formats
+- consensus editing
+  - cons vs reference (how to force ref edits)
+  - insert/del columns of data
+- editor names panel
+
+-----------------------------------------------------------------------------
+
 *	tg_index.c explicitly sets io->db->seq_name_index = 0 if we
         don't do -t. Ideally we should simply not create it in the
         first place, or better create it but ignore it.
